# channels_envelope

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  delete_migrations.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  test.yml
dev_settings/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
envelope/: __init__.py  _consumers.py  admin.py  apps.py  async_signals.py  channels.py  decorators.py  envelope.py  envelopes.py  helpers.py  jobs.py  logging.py  message.py  models.py  queues.py  registries.py  registry.py  routing.py  schemas.py  signals.py  testing.py  utils.py
envelope/app/online_channel/: apps.py  async_signals.py  channel.py  signals.py
envelope/app/user_channel/: apps.py  async_signals.py  channel.py  signals.py
envelope/channels/: __init__.py  apps.py  decorators.py  errors.py  messages.py  models.py  schemas.py  testing.py  utils.py
envelope/channels/tests/: test_docs.py  test_messages.py  test_models.py
envelope/consumer/: websocket.py
envelope/consumer/tests/: test_ws_consumer.py
envelope/consumers/: utils.py  websocket.py
envelope/consumers/tests/: test_consumers.py  test_ws_consumer.py
envelope/core/: __init__.py  async_signals.py  channels.py  consumer.py  envelope.py  errors.py  message.py  registry.py  schemas.py  transport.py
envelope/deferred_jobs/: __init__.py  apps.py  async_signals.py  jobs.py  message.py  queues.py
envelope/handlers/: __init__.py  async_runnable.py  base.py  deferred_job.py
envelope/messages/: __init__.py  actions.py  base.py  channels.py  common.py  errors.py  ping.py  testing.py
envelope/migrations/: 0001_initial.py  0002_auto_20211214_1327.py
envelope/tests/: helpers.py  test_async_signals.py  test_consumers.py  test_decorators.py  test_docs.py  test_logging.py  test_models.py  test_utils.py
(+15 files in other folders)
