[metadata]
name = channels-envelope
version = 0.1
description = Message handling for Django channels
long_description = file: README.md
url = https://github.com/VoteIT/channels_envelope
author = VoteIT dev team
author_email = info@voteit.se
license = GPLv3  # Example license

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    channels>=3.0.0
    channels_redis
    django < 4, >= 3.2
    django-rq >= 2.4.0, <3
    rq >= 1.7.0, < 2
#    rq-scheduler


test_suite = tests
include_package_data = true
packages = find:


[options.extras_require]
testing =
    coverage>=5.0
    fakeredis
#    responses